# xarray-ms

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.rst  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pre-commit.yml  readthedocs.yml  static-checks.yml
doc/source/: api.rst  changelog.rst  conf.py  history.rst  index.rst  install.rst  introduction.rst  links.rst  partitioning.rst  roadmap.rst  tutorial.rst
tests/: conftest.py  test_accessors.py  test_antenna.py  test_backend.py  test_basic.py  test_corpus.py  test_driver.py  test_encoding.py  test_field_and_source.py  test_generation.py  test_github.py  test_imputation.py  test_measures.py  test_multiton.py  test_read.py  test_row_mapping.py  test_structure.py  test_table_factory.py  test_table_proxy.py  test_table_utils.py  test_time.py  test_utils.py  test_write.py  test_zarr_roundtrip.py
tests/msv4_test_corpus/: conftest.py  test_msv_corpus.py
xarray_ms/: __init__.py  accessors.py  casa_types.py  core.py  errors.py  msv4_types.py  multiton.py  query.py  table_proxy.py  time.py  utils.py
xarray_ms/backend/msv2/: accessors.py  antenna_dataset_factory.py  array.py  cacheset.py  encoders.py  entrypoint.py  entrypoint_args.py  entrypoint_utils.py  generation.py  imputation.py  main_dataset_factory.py  measures_adapters.py  measures_encoders.py  msv2_schema.py  partition.py  row_mapping.py  structure.py  table_factory.py  table_proxy.py  table_utils.py  writes.py
xarray_ms/backend/msv2/factories/: __init__.py  antenna.py  core.py  correlated.py  field_and_source.py
xarray_ms/testing/: casa_types.py  corpus.py  simulator.py  utils.py
