[project]
name = "xarray-ms"
version = "0.3.7"
description = "xarray MSv4 views over MSv2 Measurement Sets"
authors = [{name = "Simon Perkins", email = "simon.perkins@gmail.com"}]
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "xarray>=2025.0, < 2025.9.1",
    "cacheout>=0.16.0",
    "arcae>=0.3.2, < 0.4.0",
    "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.0.0",
    "dask>=2024.5.0",
    "distributed>=2024.5.0",
    "zarr>=2.18.3, <3.0.0",
    "platformdirs>=4.3.8",
]
dev = [
    "pre-commit>=3.8.0",
    "tbump>=6.11.0",
]
doc = [
    "sphinx>=8.0.2",
    "sphinxcontrib-spelling",
    "pygments>=2.18.0",
    "sphinx-copybutton>=0.5.2",
    "pydata-sphinx-theme>=0.15.4",
    "ipython>=8.27.0",
]

[project.entry-points."xarray.backends"]
"xarray-ms:msv2" = "xarray_ms.backend.msv2.entrypoint:MSv2EntryPoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]
extend-select = ["I"]

[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
# github_url = "https://github.com/<user or organization>/<project>/"

[tool.tbump.version]
current = "0.3.7"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "doc/source/conf.py"

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made

#  [[tool.tbump.before_commit]]
#  name = "check changelog"
#  cmd = "grep -q {new_version} Changelog.rst"

# Or run some commands after the git tag and the branch
# have been pushed:
#  [[tool.tbump.after_push]]
#  name = "publish"
#  cmd = "./publish.sh"
