[project]
name = "xarray-ms"
version = "0.4.0-alpha.5"
description = "xarray MSv4 views over MSv2 Measurement Sets"
authors = [{name = "Simon Perkins", email = "simon.perkins@gmail.com"}]
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "xarray>=2025.0",
    "arcae>=0.4.0a4, < 0.5.0",
    "typing-extensions>=4.12.2",
    "rarg-python-patterns>=0.0.3",
]

[dependency-groups]
test = [
    "pytest>=8.0.0,!=9.1.0",
    "dask>=2024.5.0",
    "distributed>=2024.5.0",
    "zarr>=2.18.3, <3.0.0",
    "platformdirs>=4.3.8",
    "xradio>=1.1.2; python_version >= '3.11' and python_version < '3.14'",
]
dev = [
    "pre-commit>=3.8.0",
    "tbump>=6.11.0",
]
doc = [
    "sphinx>=8.0.2",
    "sphinxcontrib-spelling",
    "pygments>=2.18.0",
    "sphinx-copybutton>=0.5.2",
    "pydata-sphinx-theme>=0.15.4",
    "ipython>=8.27.0",
]

[project.entry-points."xarray.backends"]
"xarray-ms:msv2" = "xarray_ms.backend.msv2.entrypoint:MSv2EntryPoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]
extend-select = ["I"]

[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
# github_url = "https://github.com/<user or organization>/<project>/"

[tool.tbump.version]
current = "0.4.0-alpha.5"

# https://semver.org/#spec-item-9
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  -?
  (?P<ptype>(alpha|beta|rc)\.(?P<prerelease>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "doc/source/conf.py"
search = 'release = "{current_version}"'

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made

#  [[tool.tbump.before_commit]]
#  name = "check changelog"
#  cmd = "grep -q {new_version} Changelog.rst"

# Or run some commands after the git tag and the branch
# have been pushed:
#  [[tool.tbump.after_push]]
#  name = "publish"
#  cmd = "./publish.sh"
